# Top10PonyVotingProcessing

./: .env.dist  .env.empty  .gitignore  Blacklist.py  DataPulling.py  IntroDocsTest.md  LICENSE  README.md  calc_main.py  data_pulling.py  duplicate.py  main.py  post_processing.py  pyproject.toml  requirements.txt  test.py  top_10_calculator.py  vote_processing.py
build_tools/: build_exe.py  create_installer_exe.py  install_and_run.bat  install_and_run.ps1  run_app.bat  run_app.ps1  setup_dev.py
calculation/: calc.py  data_pulling.py
classes/: archive.py  caching.py  enums.py  exceptions.py  fetch_services.py  fetcher.py  gui.py  month_year.py  printers.py  typing.py  ui.py  video_metadata.py  voting.py
config/: config.json
core_utilities/: archive_checker.py  post_processing.py  top_10_calculator.py  vote_processing.py
data/: accepted_domains.txt  annotations.json  blacklist.txt  creator_aliases.json  formatting_template.ods  globals.py  uploader_whitelist.txt
functions/: archive.py  ballot_rules.py  config.py  date.py  general.py  leaderboard.py  manual_input.py  messages.py  post_processing.py  services.py  similarity.py  top_10_calc.py  top_10_parser.py  update.py  url.py  video_data.py  video_rules.py  voting.py
modules/: blacklist.py  data_pulling.py  deleter.py  duplicate.py  duration_check.py  durationcheck.py  fuzzy_check.py  fuzzycheck.py  init.py  upload_date.py  uploader_diversity.py  uploader_occurence.py
outputs/: info.txt  order.txt  processed.csv  processedAutomated.csv
processes/: archive_checker.py  leaderboard.py  post_processing.py  (+2 more)
(+34 files in other folders)
