[tool.poetry]
name = "top10-pony-voting-processing"
version = "0.1.0"
description = "Python GUI application to process the monthly voting for the Top 10 Pony Videos showcase"
authors = ["TheTop10PonyVideos <your-email@example.com>"]
readme = "README.md"
packages = [{include = "classes"}, {include = "core_utilities"}, {include = "data"}, {include = "functions"}, {include = "modules"}]

[tool.poetry.dependencies]
python = "^3.13"
python-dotenv = "*"
fuzzywuzzy = "*"
google-api-python-client = "*"
yt-dlp = "2025.07.21"
pytz = "*"
python-Levenshtein = "*"
pillow = "*"
tkinter-tooltip = "*"
aiohttp = "*"

[tool.poetry.group.dev.dependencies]
black = "*"
pytest = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
top10-voting = "main:main"
